SBVTestSuite/TestSuite/CompileTests/SCase/SCase23.stderr
SCase23.hs:11:14: error: [GHC-40910] [-Wunused-matches, Werror=unused-matches]
    Defined but not used: i
   |
11 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

